Fixed wallet not showing

--- a/src/less/_utils.less
+++ b/src/less/_utils.less
@@ -18,7 +18,7 @@
 @font-size-xs: 9px;
 @font-size-s: 11px;
 @font-size-m: 13px;
-@font-size-l: 1px;
+@font-size-l: 15px;
 @font-size-xl: 20px;
 @font-size-xxl: 30px;
 @font-size: 13px;
